apps/base/media/sym-radarr/sym-radarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sym-radarr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://sym-radarr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sym Radarr"
    gethomepage.dev/description: "Movie organizer for symlink stack"
    gethomepage.dev/app: sym-radarr
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/radarr.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`sym-radarr.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: sym-radarr
          port: 7878
  tls: {}
